; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_proc_apply_task_networkbg.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_resource.c_proc_apply_task_networkbg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PROC_NULL = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @proc_apply_task_networkbg(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i8*, i8** @PROC_NULL, align 8
  %9 = icmp ne i8* %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @assert(i32 %10)
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @proc_pid(i8* %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call i8* @proc_find(i32 %14)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** @PROC_NULL, align 8
  %18 = icmp ne i8* %16, %17
  br i1 %18, label %19, label %30

19:                                               ; preds = %2
  %20 = load i8*, i8** %6, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = icmp eq i8* %20, %21
  %23 = zext i1 %22 to i32
  %24 = call i32 @assert(i32 %23)
  %25 = load i8*, i8** %6, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @do_background_socket(i8* %25, i32 %26)
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @proc_rele(i8* %28)
  br label %30

30:                                               ; preds = %19, %2
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @proc_pid(i8*) #1

declare dso_local i8* @proc_find(i32) #1

declare dso_local i32 @do_background_socket(i8*, i32) #1

declare dso_local i32 @proc_rele(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
